--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "html-webpack-plugin": "2.29.0",
     "immer": "^1.3.1",
     "jest": "22.4.2",
+    "lodash": "^4.17.10",
     "object-assign": "4.1.1",
     "open-color": "^1.6.3",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
+    "@types/lodash": "^4.14.109",
     "@types/node": "^10.1.3",
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
@@ -118,5 +120,5 @@
       "react-app"
     ]
   },
-	"proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000"
 }
