--- a/client/package.json
+++ b/client/package.json
@@ -26,10 +26,12 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "query-string": "5",
     "raf": "3.4.0",
     "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
+    "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
@@ -62,8 +64,10 @@
     "@types/jest": "^22.2.3",
     "@types/lodash": "^4.14.109",
     "@types/node": "^10.1.3",
+    "@types/query-string": "^5.1.0",
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
+    "@types/react-onclickoutside": "^6.0.3",
     "@types/react-redux": "^6.0.0",
     "@types/react-router-dom": "^4.2.6",
     "@types/redux-actions": "^2.3.0",
