--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-textarea-autosize": "^4.3.2",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-jest": "^22.1.0",
@@ -34,6 +35,7 @@
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-textarea-autosize": "^6.1.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
     "redux-pender": "^1.2.1",
