--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "koa-router": "^7.4.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.37.10"
+    "sequelize": "^4.37.10",
+    "sequelize-cli": "^4.0.0"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
@@ -32,8 +33,8 @@
     "typescript": "^2.8.3"
   },
   "scripts": {
-    "start:dev": "cross-env NODE_PATH=src nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/index.ts",
+    "start:dev": "cross-env NODE_PATH=src nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/index.ts",
     "build": "tsc",
-		"server": "node dist/index.js"
+    "server": "node dist/index.js"
   }
 }
